conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: '(' expected but identifier found.
 if isFacingWall() {forward()} else {backward()} 
    ^Conditions:3: error: illegal start of simple expression
	}
        ^